# gitohashi

./: .sai.json  .travis.yml  CMakeLists.txt  LICENSE  README.md  lgtm.yml
assets/: github.css  gitohashi-custom.css  highlight.pack.js  jg2.css  jg2.js  logo.css
cmake/: .config.h.in.swp  config.h.in
doc/: README-JSON.md  README-build.md  README-cache.md  README-gitolite.md  README-libjsongit2.md
etc-gitohashi/: conf
etc-gitohashi/conf.d/: localhost  unixskt
examples/minimal/: README.md  jg2-example.c
examples/threadchurn/: threadchurn.c
include/: libjsongit2.h
lib/: README.md  cache.c  main.c  private.h  repostate.c  util.c
lib/conf/: gitolite.c  private.h  scan-repos.c
lib/conf/gitolite/: common.c  gitolite3.c
lib/email/: README.md  email.c  md5.c  private.h
lib/job/: blame.c  blog.c  commit.c  job.c  log.c  no-snapshot.c  plain.c  private.h  reflist.c  repos.c  search.c  snapshot.c  tree.c
lib/lac/: README.md  cached-file.c  lac.c  private.h
src/: main.c  protocol_avatar-proxy.c  protocol_gitohashi.c
system/: gitohashi-selinux.pp  gitohashi.service
templates/: gitohashi-example.html
xss/: README.md  xss.c
